# internal/server/handlers/handlers.go
@@ -27,6 +27,7 @@ func NewHandlers(cfg *config.Config, srvc *services.Services, mdlwrs *middleware
 	}
 }
 
+// RegisterRoutes sets up the API routes and middleware for the application.
 func (h *Handlers) RegisterRoutes(router *gin.Engine) {
 
 	// Swagger + static index.html
@@ -38,11 +39,10 @@ func (h *Handlers) RegisterRoutes(router *gin.Engine) {
 	api.Use(h.mdlwrs.Log.Handle)
 
 	// Weather GET
-	weather := api.Group("/weather")
-	weather.GET("/", h.Weather.GetWeather)
+	api.GET("/weather", h.Weather.GetWeather)
 
-	// Subscription operations
-	subscription := api.Group("/subscription")
-	subscription.POST("/subscribe", h.Subscription.Subscribe)
-	subscription.GET("/confirm/:token", h.Subscription.ConfirmSubscription)
+	// Subscription endpoints
+	api.POST("/subscribe", h.Subscription.Subscribe)
+	api.GET("/confirm/:token", h.Subscription.ConfirmSubscription)
+	api.GET("/unsubscribe/:token", h.Subscription.Unsubscribe)
 }
